# mx-sdk-py-cli

./: .ctags  .flake8  .gitignore  .pre-commit-config.yaml  CLI.md  CLI.md.sh  Dockerfile  MANIFEST.in  Makefile  README.md  bad_source.json  empty.json  empty.source.json  empty.wasm  erdpy-up.py  mxpy-up.py  mxpy_example.pem  mypy.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: auto-update-ubuntu.yml  auto-update-windows.yml  build-macos.yml  build-ubuntu.yml  build-windows.yml  build.yml  erdpy-mypy.yml  erdpy-publish.yml  erdpy-up-macos.yml  erdpy-up-ubuntu.yml  erdpy.yml  install-macos-pipx.yml  install-macos.yml  install-ubuntu-pipx.yml  install-ubuntu.yml  install-windows.yml  install.yml  migrate.yml  mypy.yml  publish.yml  test-localnet-tests.yml  test-localnet.yml
docs/: conf.py  index.rst
docs/pages/: configuration.rst  getting-started.rst  installation.rst
erdpy/: CHANGELOG.md  CLI.md  CLI.md.sh  README.md  _version.py  accounts.py  accounts_repository.py  cli.py  cli_accounts.py  cli_block.py  cli_config.py  cli_contracts.py  cli_data.py  cli_delagation.py  cli_delegation.py  cli_deps.py  cli_dispatcher.py  cli_dns.py  cli_ledger.py  cli_network.py  cli_output.py  cli_password.py  cli_shared.py  cli_testnet.py  cli_transactions.py  cli_validators.py  cli_wallet.py  config.py  constants.py  contract_verification.py  contracts.py  diskcache.py  dns.py  docker.py  environments.py  errors.py  guards.py  interfaces.py  myprocess.py  scope.py  (+4 more)
erdpy/delegation/: staking_provider.py
erdpy/dependencies/: __init__.py  install.py  modules.py
erdpy/ide/: core.py
erdpy/ledger/: config.py  ledger_app_handler.py  ledger_functions.py
erdpy/projects/: __init__.py  core.py  eei.py  eei_activation.py  eei_checks.py  eei_registry.py  interfaces.py  project_base.py  project_clang.py  project_cpp.py  project_rust.py  project_sol.py  shared.py  templates.py  templates_config.py  templates_repository.py  wabt.py
erdpy/proxy/: __init__.py  core.py  http_facade.py  messages.py
erdpy/testnet/: config.py  core.py  (+6 more)
examples/: airdrop.py  contracts.py  issuance_esdt_token.py  minting.py  staking.py
multiversx_sdk_cli/: CLI.md  CLI.md.sh  _version.py  accounts.py  accounts_repository.py  address.py  address_config.py  args_converter.py  args_validation.py  base_transactions_controller.py  cli.py  cli_accounts.py  cli_address.py  cli_block.py  cli_config.py  cli_config_env.py  cli_config_wallet.py  cli_contracts.py  cli_data.py  cli_delegation.py  cli_deps.py  cli_dns.py  cli_env.py  cli_faucet.py  cli_get.py  cli_governance.py  cli_ledger.py  cli_localnet.py  cli_multisig.py  cli_network.py  cli_output.py  cli_password.py  cli_shared.py  cli_testnet.py  cli_token.py  cli_tokens.py  cli_transactions.py  cli_validator_wallet.py  cli_validators.py  cli_wallet.py  (+39 more)
tests/: test_testnet.py
(+251 files in other folders)
