[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiversx-sdk-cli"
version = "8.1.6"
authors = [
  { name="MultiversX" },
]
license = "MIT"
description = "MultiversX Smart Contracts Tools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers"
]

dependencies = [
  "toml>=0.10.2",
  "requests",
  "prettytable",
  "ledgercomm[hid]",
  "semver",
  "requests-cache",
  "rich==13.3.4",
  "multiversx-sdk-network-providers>=0.11.0, <0.12.0",
  "multiversx-sdk-wallet>=0.7.0, <0.8.0",
  "multiversx-sdk-core==0.6.0"
]

[tool.hatch.build]
include = [
  "multiversx_sdk_cli/**"
]
exclude = [
  ".github",
  "multiversx_sdk_cli/tests/**"
]

[project.urls]
"Homepage" = "https://github.com/multiversx/mx-sdk-py-cli"
