[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiversx-sdk-cli"
version = "9.0.1"
authors = [
  { name="MultiversX" },
]
license = "MIT"
description = "MultiversX Smart Contracts Tools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers"
]

dependencies = [
  "toml>=0.10.2",
  "requests",
  "prettytable",
  "ledgercomm[hid]",
  "semver",
  "requests-cache",
  "rich==13.3.4",
  "multiversx-sdk-network-providers>=0.12.0,<0.13.0",
  "multiversx-sdk-wallet>=0.8.0,<0.9.0,",
  "multiversx-sdk-core>=0.7.0,<0.8.0"
]

[tool.hatch.build]
include = [
  "multiversx_sdk_cli/**"
]
exclude = [
  ".github",
  "multiversx_sdk_cli/tests/**"
]

[project.urls]
"Homepage" = "https://github.com/multiversx/mx-sdk-py-cli"
