[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multiversx-sdk-cli"
version = "11.1.0"
authors = [
  { name="MultiversX" },
]
license = "MIT"
description = "MultiversX Smart Contracts Tools"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers"
]

dependencies = [
  "toml>=0.10.2",
  "requests>=2.32.0,<3.0.0",
  "ledgercomm[hid]",
  "rich==13.3.4",
  "argcomplete==3.2.2",
  "multiversx-sdk[ledger]==2.0.1"
]

[project.scripts]
mxpy = "multiversx_sdk_cli.cli:main"

[tool.hatch.build]
include = [
  "multiversx_sdk_cli/**"
]
exclude = [
  ".github",
  "multiversx_sdk_cli/tests/**"
]

[project.urls]
"Homepage" = "https://github.com/multiversx/mx-sdk-py-cli"
